@@ -11,7 +11,7 @@ PKG_IS_ADDON="yes"
 PKG_ADDON_NAME="SickRage"
 PKG_ADDON_TYPE="xbmc.service"
 PKG_MAINTAINER="thoradia"
-PKG_REV="16"
+PKG_REV="17"
 PKG_SHORTDESC="$PKG_ADDON_NAME: automatic video library manager for TV shows"
 PKG_LONGDESC="$PKG_ADDON_NAME ($PKG_VERSION) watches for new episodes of your favorite shows, and when they are posted it does its magic"
 PKG_DISCLAIMER="Keep it legal and carry on"
